# ollama-desktop-linux

./: .gitignore  404.html  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRODUCT_SPEC.md  README.md  SECURITY.md  _typos.toml  cliff.toml  eslint.config.js  hashmap.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  sonar-project.properties  vite.config.ts
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  codeql.yml  dependency-review.yml  docs.yml  release.yml
alpaka-desktop-mockup/: README.md
alpaka-desktop-mockup/chats/: chat1.md
alpaka-desktop-mockup/project/: Ollama Linux Prototype.html  Ollama Linux Wireframes.html
assets/: app.D5YyZpmh.js  app.DRjpp7Fh.js  app.Ds5cc1l_.js  app.DuCD6P3E.js  demo_README.md.CyXRTI9u.js  demo_README.md.CyXRTI9u.lean.js  dev_backend.md.YVfT-H7A.js  dev_backend.md.YVfT-H7A.lean.js  dev_contributing.md.BMfUQ9VF.js  dev_contributing.md.BMfUQ9VF.lean.js  dev_frontend.md.FK7Fkm8U.js  dev_frontend.md.FK7Fkm8U.lean.js  dev_index.md.C2BylWdH.js  dev_index.md.C2BylWdH.lean.js  dev_index.md.uGIefvAJ.js  dev_index.md.uGIefvAJ.lean.js  guide_chat.md.pDw9BFPZ.js  guide_chat.md.pDw9BFPZ.lean.js  guide_cloud.md.NwjSDsO1.js  guide_cloud.md.NwjSDsO1.lean.js  guide_index.md.1dvMf8a9.js  guide_index.md.1dvMf8a9.lean.js  guide_keyboard.md.BQFEDGN_.js  guide_keyboard.md.BQFEDGN_.lean.js  guide_keyboard.md.CiMyFhQj.js  guide_keyboard.md.CiMyFhQj.lean.js  guide_models.md.CliMswIg.js  guide_models.md.CliMswIg.lean.js  guide_multi-host.md.DBpz5v_Y.js  guide_multi-host.md.DBpz5v_Y.lean.js  guide_settings.md.C0dp85-S.js  guide_settings.md.C0dp85-S.lean.js  guide_system.md.B1rZ8bPT.js  guide_system.md.B1rZ8bPT.lean.js  index.md.B7HUINWw.js  index.md.B7HUINWw.lean.js  index.md.BcyI4tD5.js  index.md.BcyI4tD5.lean.js  index.md.pL8eQ7Cc.js  index.md.pL8eQ7Cc.lean.js  (+1 more)
assets/chunks/: @localSearchIndexroot.BTDBRitS.js  @localSearchIndexroot.C1kx7ccH.js  @localSearchIndexroot.bQa_z84P.js  @localSearchIndexroot.cMtYjnXJ.js  VPLocalSearchBox.BEJfveOC.js  VPLocalSearchBox.DLf75tBg.js  VPLocalSearchBox.De8axXUi.js  VPLocalSearchBox.DxLznx9J.js  arc.nNVyXajD.js  architectureDiagram-Q4EWVU46.VKmZqBRN.js  baseUniq.8vxTjywo.js  blockDiagram-DXYQGD6D.Dmyt6Wx1.js  c4Diagram-AHTNJAMY.DFnqiuFt.js  channel.D6mjkQDp.js  chunk-4BX2VUAB.BfdhfF27.js  chunk-4TB4RGXK.D-FiryWi.js  chunk-55IACEB6.C5199U6M.js  chunk-EDXVE4YY.CQAL-3Ig.js  chunk-FMBD7UC4.DC9TVxdI.js  chunk-OYMX7WX6.DashnwWS.js  chunk-QZHKN3VN.C6H_l_xl.js  chunk-YZCP3GAM.DdWwLdOE.js  classDiagram-6PBFFD2Q.D9mYXWgm.js  clone.BLYutvP7.js  cose-bilkent-S5V4N54A.B_vi00ZE.js  dagre-KV5264BT.Cu7qF3Dp.js  diagram-5BDNPKRD.oho5ZGtQ.js  diagram-G4DWMVQ6.Dye_qxmQ.js  diagram-MMDJMWI5.C9DJWTtL.js  diagram-TYMM5635.DvzmUuUR.js  erDiagram-SMLLAGMA.GEnPKU_c.js  flowDiagram-DWJPFMVM.DHmQclE_.js  framework.DAY4Zhxq.js  ganttDiagram-T4ZO3ILL.ZIMLVT_D.js  gitGraphDiagram-UUTBAWPF.iJ2fPaoz.js  graph.g6wRbATN.js  infoDiagram-42DDH7IO.ChjGH4EH.js  ishikawaDiagram-UXIWVN3A.oxCqtpbX.js  journeyDiagram-VCZTEJTY.Ce91Wzr5.js  kanban-definition-6JOO6SKY.DL62gbYn.js  (+20 more)
demo/: README.html
dev/: backend.html  contributing.html  frontend.html  index.html
docs/: ARCHITECTURE.md  PRODUCT_SPEC.md  index.md
docs/.vitepress/: config.ts
docs/demo/: README.md
docs/dev/: backend.md  contributing.md  frontend.md  index.md
docs/guide/: chat.md  cloud.md  index.md  keyboard.md  models.md  multi-host.md  settings.md  system.md
e2e/: chat.spec.ts  models.spec.ts  settings.spec.ts
e2e-desktop/: tsconfig.json  wdio.integration.conf.ts  wdio.smoke.conf.ts
e2e-desktop/fixtures/: db.ts
e2e-desktop/helpers/: tauri-driver.ts
e2e-desktop/integration/: chat.spec.ts  hosts.spec.ts  models.spec.ts  streaming.spec.ts
e2e-desktop/pages/: BasePage.ts  ChatPage.ts  LaunchPage.ts  ModelsPage.ts  SettingsPage.ts
e2e-desktop/smoke/: app-launch.spec.ts  navigation.spec.ts  settings.spec.ts
guide/: chat.html  cloud.html  index.html  keyboard.html  models.html  multi-host.html  settings.html  system.html
packaging/: build-pacman.sh
packaging/aur/: PKGBUILD
packaging/aur-git/: PKGBUILD
packaging/pacman/: PKGBUILD
playwright-report/: index.html
scripts/: profile.sh
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/auth/: keyring.rs
src-tauri/src/commands/: auth.rs  chat.rs  chat.tests.rs  folders.rs  hosts.rs  library.rs  mod.rs  model_create.rs  model_path.rs  model_settings.rs  model_user_data.rs  models.rs  service.rs  settings.rs  system.rs  system_info.rs
src-tauri/src/commands/auth/: api_key.rs  mod.rs  oauth.rs
src-tauri/src/db/: conversations.rs  folders.rs  hosts.rs  messages.rs  migrations.rs  mod.rs  model_settings.rs  model_user_data.rs  repo.rs  settings.rs
src-tauri/src/db/sql/: 001_init_v1.sql  002_model_settings.sql  003_model_user_data.sql  v1_initial_schema.sql
src-tauri/src/ollama/: client.rs  mod.rs  search.rs  streaming.rs  types.rs
src-tauri/src/services/: chat.rs  library.rs  mod.rs  prompt.rs  search.rs
src-tauri/src/services/chat/: compact.rs  context.rs  mod.rs  orchestrator.rs
src-tauri/src/system/: mod.rs  notifications.rs  systemd.rs  tray.rs
src-tauri/tests/: chat_test.rs  folders_test.rs  hosts_test.rs  models_test.rs
src/composables/: useAppOrchestration.test.ts  useAppOrchestration.ts  useAttachments.test.ts  useAttachments.ts  useAutoScroll.ts  useCollapsibleState.ts  useConfirmationModal.ts  useContextWindow.test.ts  useContextWindow.ts  useConversationLifecycle.test.ts  useConversationLifecycle.ts  useCopyToClipboard.ts  useDraftManager.test.ts  useDraftManager.ts  useDraftSync.ts  useKeyboard.test.ts  useKeyboard.ts  useModelCreate.ts  useModelDefaults.test.ts  useModelDefaults.ts  useModelLibrary.test.ts  useModelLibrary.ts  (+9 more)
(+104 files in other folders)
