[package]
name = "alpaka-desktop"
version = "1.1.1"
description = "Native desktop client for Ollama"
authors = ["nikoteressi@gmail.com"]
edition = "2021"
rust-version = "1.77.2"   # CVE-2024-24576 minimum

[lib]
name = "alpaka_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
# ── Tauri core ─────────────────────────────────────────────────────────────
tauri = { version = "2.10", features = ["tray-icon", "image-png"] }

# ── Tauri official plugins ──────────────────────────────────────────────────
tauri-plugin-fs           = "2.5"
tauri-plugin-dialog       = "2.7"
tauri-plugin-notification = "2.3"
tauri-plugin-global-shortcut = "2.3"
tauri-plugin-log          = "2.8"

# ── Async runtime ─────────────────────────────────────────────────────────
tokio        = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures-util = "0.3"

# ── HTTP client (Ollama API + streaming) ───────────────────────────────────
reqwest = { version = "0.12", features = [
  "json",
  "stream",
  "rustls-tls",
], default-features = false }

# ── SQLite persistence (SQLCipher) ──────────────────────────────────────────
rusqlite = { version = "0.31", features = [
  "bundled-sqlcipher",
  "backup",
] }

# ── Secrets / keyring → Secret Service API ────────────────────────────────
keyring = { version = "3", features = [
  "async-secret-service",
  "tokio",
  "crypto-openssl",
] }

# ── Serialization ─────────────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
log        = "0.4"

# ── Error handling ─────────────────────────────────────────────────────────
thiserror = "1"

# ── Logging / tracing ─────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Utilities ─────────────────────────────────────────────────────────────
uuid   = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dunce  = "1"
url    = "2"
base64 = "0.22.1"
ignore = "0.4.25"
regex  = "1"
once_cell = "1"
html-escape = "0.2.13"
tauri-plugin-opener = "2.5.3"

[dev-dependencies]
tokio   = { version = "1", features = ["full", "test-util"] }
mockall = "0.13"
mockito = "1"
tempfile = "3.27.0"
tauri = { version = "2", features = ["test"] }


[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "s"
strip         = true
